Update code on portf.html

--- a/code on portf.html
+++ b/code on portf.html
@@ -15,7 +15,7 @@
     <a href="#c2">Work</a>
     <p><a href="#c1">About</a></p>
     <br>
-    <img  src="C:\Users\hp\Downloads\IMG_20210416_192549.jpg" alt="image" style="padding-top: 200px;" height="400">
+    <img  src="https://github.com/shivani2424/port/blob/main/IMG_20210416_192549.jpg?raw=true" alt="image" style="padding-top: 200px;" height="400">
     <h1 id="c1" style="text-align: center;">About </h1>
     <pre class="intro" > 
         My name is Shivani.I am persuing Btech 4th 
